examples/errors/if_branch_no_else/main.lc

function main() {
    const a = 3;
    const b = if a == 4 {
        4
    };
    print(b);
}
